--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   bloc: ^8.1.0
+  equatable: ^2.0.5
   flutter_bloc: ^8.1.1
   get_it: ^7.2.0
   hive: ^2.2.3
   flutter_dotenv: ^5.0.2
+  dartz: ^0.10.1
+  internet_connection_checker: ^1.0.0+1
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
@@ -70,8 +74,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - .env
-  #   - images/a_dot_ham.jpeg
+    - .env
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
